--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -1,9 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MenuPrincipal">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textnome"
+        android:text="@string/nome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"/>
+
+    <EditText
+        android:id="@+id/nome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:layout_below="@+id/textnome"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="@string/hint_nome"
+        android:layout_marginTop="5dp">
+
+        <requestFocus/>
+    </EditText>
+
+    <TextView
+        android:id="@+id/dif_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nome"
+        android:layout_marginTop="31dp"
+        android:text="@string/dificuldade"
+        android:textStyle="bold"/>
+
+    <RadioGroup
+        android:id="@+id/radiogrupodif"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dif_view"
+        android:layout_marginTop="5dp"
+        >
+
+        <RadioButton
+            android:id="@+id/btfacil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/facil"
+            android:checked="true"
+            android:onClick="radioClicked"/>
+
+        <RadioButton
+            android:id="@+id/btmedio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/medio"
+            android:onClick="radioClicked"/>
+
+        <RadioButton
+            android:id="@+id/btdificil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dificil"
+            android:onClick="radioClicked"/>
+
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/iniciar"
+        android:onClick="submitData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/inicia"
+        android:layout_below="@+id/radiogrupodif"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
+
+    <Button
+        android:id="@+id/record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iniciar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/recorde" />
+
+    <Button
+        android:id="@+id/sair"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sair"
+        android:layout_below="@+id/record"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:onClick="sair" />
+
+    <ImageView
+        android:id="@+id/image1"
+        android:src="@drawable/ghost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/app_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/sair"
+        android:layout_toLeftOf="@+id/iniciar"
+        android:layout_toStartOf="@+id/iniciar" />
+
+    <ImageView
+        android:id="@+id/image2"
+        android:src="@drawable/zangzang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:contentDescription="@string/app_name" />
+
+
+</RelativeLayout>
